--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,10 +26,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm ci
+    - name: npm i
+      run: npm i
+    - run: npm run build --if-present
     - name: Lint
       run: npm run nx -- lint
     - name: Unit tests
       run: npm run nx -- test
-    - run: npm ci
-    - run: npm run build --if-present
     - run: npm test
